--- a/android/platform/android/res/layout/capture.xml
+++ b/android/platform/android/res/layout/capture.xml
@@ -227,13 +227,31 @@
 
   </LinearLayout>
 
-  <TextView android:id="@+id/status_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/transparent"
-            android:text="@string/msg_default_status"
-            android:textColor="@color/status_text"
-            android:textSize="14sp"/>
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      android:layout_gravity="bottom|center_horizontal">
+
+    <TextView android:id="@+id/status_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:background="@color/transparent"
+        android:text="@string/msg_default_status"
+        android:textColor="@color/status_text"
+        android:textSize="14sp"/>
+
+
+    <Button android:id="@+id/back_button"
+        android:layout_marginTop="10dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:height="60dp"
+        android:textAlignment="center"
+        android:layout_gravity="bottom|center_horizontal"
+        android:text="@string/button_cancel"/>
+
+  </LinearLayout>
 
 </FrameLayout>
